Add favorite pages management feature